--- a/style.css
+++ b/style.css
@@ -1,7 +1,120 @@
+body{
+   margin: 0;
+   height: 90vh;
+   width: 100%;
+}
+
+h1{
+    text-align: center;
+    border-bottom: 2.5px solid black;
+}
+
+.content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
 .registro{
-    display: block;
+    display: flex;
+    height: 25%;
+    width: 25%;
+}
+.form-registro{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 30% 70% ;
+    grid-template-rows: repeat(3,33.3%);
+    font-size: 20px;
+}
+.form-registro-entrada-name,.form-registro-entrada-password{
+    height: 60%;
+    width: 100%;
+}
+.form-registro-entrada-submit{
+    width: 100%;
+    display: grid;
+    grid-row: 3/4;
+    grid-column: 1/3;
+    border-style: none;
+    color:  grey;
+    border: grey solid 1px;
+    font-size: 25px;
 }
 
 .buscador{
     display: none;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    font-size: 25px;
+}
+
+.form-buscador{
+    top: 0;right: 0;left: 0;bottom: 0; margin: auto;
+    font-size: 30px;
+    height: 5%;
+    width: 60%;
+    display: grid;
+    grid-template-columns: 18% 62% 20%;
+
+}
+.form-buscador-entrada-submit{
+    top: 0;right: 0;left: 0;bottom: 0; margin: auto;
+   width: 80%;
+   height: 100%;
+   border-style: none;
+   color:  grey;
+   border: grey solid 1px;
+   font-size: 25px;
+}
+
+@media screen and (max-width:1030px){
+    .registro{
+        display: flex;
+        height: 40%;
+        width: 30%;
+    }
+    .form-registro{
+        text-align: center;
+        display: grid;
+        grid-template-columns: repeat(1,100%);
+        grid-template-rows: repeat(5,20%);
+    }
+  
+    .form-registro-entrada-name:nth-child(1){
+        display: grid;
+        grid-row: 1/2;
+        grid-column: 1/2;
+    }
+    .form-registro-entrada-name:nth-child(2){
+        display: grid;
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+    .form-registro-entrada-password:nth-child(1){
+        display: grid;
+        grid-row: 3/4;
+        grid-column: 1/2;
+    }
+    .form-registro-entrada-password:nth-child(2){
+        display: grid;
+        grid-row: 4/5;
+        grid-column: 1/2;
+    }
+    .form-registro-entrada-submit{
+        display: grid;
+        grid-row: 5/6;
+        grid-column: 1/2;      
+    }
+}
+
+@media screen and (max-width:800px){
+    body{
+        width: 800px;
+    }
 }
