--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@ body{
    margin: 0;
    height: 90vh;
    width: 100%;
+   background-color: black;
+   color: white;
 }
 
 .titulo{
     text-align: center;
     border-bottom: 2.5px solid black;
+    margin: 0 0 0 0;
 }
 
 .content{
@@ -14,8 +17,9 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100%;
+    height: 80vh;
     width: 100%;
+    min-width: 100%;
 }
 
 .registro{
@@ -47,38 +51,53 @@ body{
 }
 
 .buscador{
+    top: 0;right: 0;left: 0;bottom: 0; margin: auto;
     height: 100%;
-    width: 100%;
+    width: 80%;
     text-align: center;
     font-size: 25px;
     display: none;
-    grid-template-rows: 20% 80%;
+    grid-template-rows: 10% 90%;
+    grid-template-columns: 35% 65%;
 }
 
 .form-buscador{
     top: 0;right: 0;left: 0;bottom: 0; margin: auto;
     font-size: 30px;
-    height: 5%;
-    width: 60%;
-    display: grid;
-    grid-template-columns: 18% 62% 20%;
-
+    height: 60px;
+    width: 500px;
+    display: none;
+    grid-template-columns: 15% 65% 20%;
+    border-top: white solid 1.5px;
 }
-.form-buscador-entrada-submit{
+.form-buscador-entrada-submit,.form-buscador-entrada-name{
     top: 0;right: 0;left: 0;bottom: 0; margin: auto;
-   width: 80%;
-   height: 100%;
+    text-align: center;
+   width: 96%;
+   height: 60%;
    border-style: none;
    color:  grey;
    border: grey solid 1px;
    font-size: 25px;
 }
 
-.resultado-buscador{
+.form-buscador-entrada-name:nth-child(1){
+    color: white;
+    border: none;
+    text-align: center;
+}
+
+.form-buscador-entrada-name:nth-child(2){
+    height: 50%;
+}
+
+.form-buscador-entrada-submit{
+  font-size: 20px;
+  width: 80%;
+}
+.resultado-buscador,.resultado-favorita{
     height: 100%;
     width: 100%;
-   display: grid;
-   grid-template-columns: 30% 75% 5%;
 }
 
 @media screen and (max-width:1030px){
@@ -130,8 +149,18 @@ body{
 .poster{
     display: grid;
     grid-template-rows:8% 84% 8%;
-    height: 300px;
+    height: 280px;
     width: 200px;
+    font-size: 15px;
+    text-align: center;
+    border: 2px solid black;
+}
+
+.posterF{
+    display: grid;
+    grid-template-rows:8% 84% 8%;
+    height: 250px;
+    width: 150px;
     font-size: 15px;
     text-align: center;
     border: 2px solid black;
@@ -143,15 +172,28 @@ body{
    width: 100%;
 }
 
-.taquilla{
-    top: 0; left: 0; bottom: 0; right: 0; margin: auto;
+.taquilla,.favorite{
     height: 100%;
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
+    border-top: white solid 1.5px;
     justify-content: space-evenly;
+    overflow:auto;
+}
+.favorite{
+    justify-content: space-between;
 }
 
 .mensaje{
     display: none;
 }
+
+.title2{
+    display: inline-block;
+    width: 100%;
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
+}
+
