--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
    height: 60%;
    border-style: none;
    color:  grey;
-   border: grey solid 1px;
+   border: rgb(243, 241, 241) solid 1px;
    font-size: 25px;
 }
 
@@ -197,3 +197,8 @@ body{
     padding: 0;
 }
 
+.button{
+    border-style: none;
+   color:  black;
+   border: rgb(243, 241, 241) solid 1px;
+}
